log/build_2021-06-07_01-46-17/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: In function ‘void subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr)’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:16:62: warning: unused parameter ‘data_msg’ [-Wunused-parameter]
   16 | void subs_callback(const interfaces::msg::ImgData::SharedPtr data_msg)
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: In function ‘void pid_serv(std::shared_ptr<interfaces::srv::ControlPidStart_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::ControlPidStart_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:23:80: warning: unused parameter ‘request’ [-Wunused-parameter]
   23 | void pid_serv(const std::shared_ptr<interfaces::srv::ControlPidStart::Request> request,
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:24:63: warning: unused parameter ‘response’ [-Wunused-parameter]
   24 |   std::shared_ptr<interfaces::srv::ControlPidStart::Response> response)
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: In function ‘int main(int, char**)’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:50:45: error: invalid use of ‘this’ in non-member function
   50 |   "image_data", 1, std::bind(&subs_callback,this, _1));
      |                                             ^~~~
make[2]: *** [CMakeFiles/control_pid_p1_server.dir/build.make:63: CMakeFiles/control_pid_p1_server.dir/src/control_pid_p1_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/control_pid_p1_server.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
